--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@
 
 #header {
   width: 100%;
-  min-height: 70vh;
   position: relative;
   background: #a59e9e;
 }
@@ -55,7 +54,7 @@
 }
 
 .header-image-inner {
-  margin-top: 50px;
+  margin-top: 20px;
   padding-left: 110px;
   padding-right: 110px;
 }
@@ -95,4 +94,68 @@
 
 .button-transperent:hover {
   background: #232323;
+}
+
+#pros-1 {
+  max-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+}
+
+.text-red {
+  color: #f30;
+}
+
+.pros-images, .pros-content {
+  min-width: 50%;
+  max-height: 100vh;
+  overflow: hidden;
+  flex-basis: 400px;
+  flex-grow: 1;
+  position: relative;
+  min-height: 400px;
+  top: 80px;
+}
+
+.pros-images {
+  height: auto;
+}
+
+.pros-content {
+  height: 100%;
+}
+
+.main-image {
+  margin-left: 25%;
+  width: 75%;
+  height: 100%;
+}
+.main-image img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  object-position: 50% 50%;
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+  overflow: hidden;
+  text-rendering: optimizeLegibility;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.minor-image {
+  position: absolute;
+  left: 10%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  display: grid;
+  align-items: center;
+  align-content: center;
+  z-index: 10;
+}
+.minor-image img {
+  max-height: 60vh;
 }
