--- a/css/style.css
+++ b/css/style.css
@@ -96,11 +96,15 @@
   background: #232323;
 }
 
+.pros-title {
+  font-weight: 900;
+}
+
 #pros-1 {
-  max-width: 100%;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
-  height: 100%;
+  position: relative;
 }
 
 .text-red {
@@ -111,19 +115,21 @@
   min-width: 50%;
   max-height: 100vh;
   overflow: hidden;
-  flex-basis: 400px;
-  flex-grow: 1;
   position: relative;
-  min-height: 400px;
   top: 80px;
 }
 
 .pros-images {
+  flex-basis: 400px;
+  flex-grow: 1;
+  min-height: 400px;
   height: auto;
 }
 
 .pros-content {
-  height: 100%;
+  min-height: 100%;
+  display: grid;
+  align-content: center;
 }
 
 .main-image {
@@ -152,7 +158,6 @@
   top: 0;
   bottom: 0;
   display: grid;
-  align-items: center;
   align-content: center;
   z-index: 10;
 }
