--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@
 }
 
 .pros-title {
-  font-weight: 900;
+  font-weight: 1000;
 }
 
 #pros-1 {
@@ -113,6 +113,7 @@
 
 .pros-images, .pros-content {
   min-width: 50%;
+  max-width: 50%;
   max-height: 100vh;
   overflow: hidden;
   position: relative;
