--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,10 @@ body {
   font-weight: 1000;
 }
 
+.font-weight-800 {
+  font-weight: 800;
+}
+
 #pros-1, #pros-2, #pros-3 {
   display: flex;
   flex-wrap: wrap;
@@ -194,8 +198,8 @@ body {
   border-radius: 10px;
 }
 .card img {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 25px;
+  margin-right: 25px;
   border-radius: 5px;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
 }
@@ -245,4 +249,10 @@ body {
 }
 .card-active .button-card:hover {
   background: #cc2900;
+}
+
+.img-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
