--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,10 @@ body {
   color: #f30;
 }
 
+.border-red {
+  border-color: #f30 !important;
+}
+
 .pros-images, .pros-content {
   min-width: 50%;
   max-width: 50%;
@@ -255,4 +259,10 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.colors-block {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+  grid-gap: 10px;
 }
